--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,21 +1,17 @@
-eureka:
-  client:
-   register-with-eureka: true
-   fetch-registry: true
-   service-url:
-    defaultZone: http://localhost:8761/eureka
-
 server: 
  port: 8040
 
 spring:
  application:
   name: api-gateway
+  
+ config:
+  import: configserver:http://localhost:8050
 
  cloud:
   inetutils:
    preferred-networks: 127.0.0.1
- 
+   
   gateway:
    routes:
     - id: USER-SERVICE
