--- a/hotel-service/src/main/resources/application.yml
+++ b/hotel-service/src/main/resources/application.yml
@@ -4,12 +4,14 @@ spring:
  cloud:
   inetutils:
    preferred-networks: 127.0.0.1
-  
+ config:
+  import: configserver:http://localhost:8050
+    
  datasource:
   driver-class-name: com.mysql.jdbc.Driver
   url: jdbc:mysql://localhost:3306/hotel
   username: root
-  password: 654321
+  password: root
 
 # jpa:
 #  hibernate:
@@ -21,9 +23,3 @@ server:
  servlet: 
   context-path: /hotel-app/api/
     
-eureka:
-  client:
-   register-with-eureka: true
-   fetch-registry: true
-   service-url:
-    defaultZone: http://localhost:8761/eureka
