--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-spring:
+spring: 
  application:
   name: user-service
  cloud:
@@ -9,8 +9,12 @@ spring:
   driver-class-name: com.mysql.jdbc.Driver
   url: jdbc:mysql://localhost:3306/hotel
   username: root
-  password: 654321
+  password: root
 
+
+ config:
+  import: configserver:http://localhost:8050
+  
 # jpa:
 #  hibernate:
 #   ddl-auto: create
@@ -21,9 +25,9 @@ server:
  servlet: 
    context-path: /user-app/api/
     
-eureka:
-  client:
-   register-with-eureka: true
-   fetch-registry: true
-   service-url:
-    defaultZone: http://localhost:8761/eureka
+#eureka:
+#  client:
+#   register-with-eureka: true
+#   fetch-registry: true
+#   service-url:
+#    defaultZone: http://localhost:8761/eureka
